Rename block from howto/square2 to argilo/queue.

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -18,6 +18,6 @@
 # Boston, MA 02110-1301, USA.
 
 install(FILES
-    howto_square2_ff.xml
+    argilo_queue_ff.xml
     DESTINATION share/gnuradio/grc/blocks
 )
